--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.App, h5 {
   text-align: center;
 }
 h2{
@@ -9,6 +9,10 @@ h2{
   height: 100vh;
   background-color: #c0aca2;
 }
+h5{
+  width: 30vw;
+  margin: 0;
+}
 #block, #info{
   display: flex;
   justify-content: center;
@@ -17,7 +21,7 @@ h2{
 }
 #info{
   width: 40vw;
-  height: 80vh;
+  height: 90vh;
   background-color: #8c525e;
   border-radius: 50%;
 }
