--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,11 @@
-.App, h5 {
+.App{
   text-align: center;
-}
-h2{
-  margin: 0;
-}
-#block{
-  width: 100vw;
-  height: 100vh;
-  background-color: #c0aca2;
-}
-h5{
-  width: 30vw;
-  margin: 0;
 }
 #block, #info{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-#info{
-  width: 40vw;
-  height: 90vh;
-  background-color: #8c525e;
-  border-radius: 50%;
 }
 
 .App-logo {
