--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+.App, #boxDetails, #postsBox{
   text-align: center;
 }
 #block, #info{
@@ -18,7 +18,7 @@
   height: 20vh;
   margin: 10px;
   border-radius: 10px;
-  background-color: #754736;
+  background-color: #724939;
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -31,7 +31,22 @@
 #buttonPost, #buttonPost2{
   margin: 10px;
   background-color: #cbbf82;
-  font-size: 15px;
+  font-size: 20px;
+  border-radius: 20px;
+}
+#postsBox{
+
+
+}
+#buttonBack{
+  width: 15vw;
+  height: 7vh;
+  background-color: #c3e3c1;
+  font-size: 26px;
+  border-radius: 30px;
+}
+p{
+  font-size: 22px;
 }
 .App-logo {
   height: 40vmin;
